# docs/openapi.yaml
@@ -9,7 +9,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 0.1.0
 servers:
-- url: https://localhost:6789/v1
+- url: http://localhost:9000/v1
 tags:
 - name: Auth
   description: 認証/ユーザー関連API
@@ -22,7 +22,31 @@ tags:
 paths:
 
   # -------------- Auth --------------
-  /login:
+  /register/:
+    post:
+      tags: 
+      - Auth
+      summary: 登録
+      operationId: register
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                screen_name:
+                  type: string
+                password:
+                  type: string
+                email: 
+                  type: string
+        required: true
+      responses:
+        400:
+          description: Created a user
+  /login/:
     post:
       tags:
       - Auth
@@ -45,7 +69,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/LoginResponse'
                 
-  /me:
+  /me/:
     get:
       tags:
       - Auth
@@ -67,7 +91,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-  /me/thumbnail:
+  /me/thumbnail/:
     put:
       tags: 
       - Auth
@@ -105,7 +129,7 @@ paths:
                     enum: 
                       - success
                       
-  /me/profile:
+  /me/profile/:
     patch:
       tags: 
       - Auth
@@ -127,7 +151,7 @@ paths:
                 $ref: '#/components/schemas/User'
                 
   # -------------- Store --------------
-  /store/overview:
+  /store/overview/:
     get:
       tags:
       - Store
@@ -155,7 +179,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Overview'
                 
-  /store/product:
+  /store/product/:
     get:
       tags:
       - Store
@@ -172,7 +196,7 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Product'
-  /store/product/{product_id}:
+  /store/product/{product_id}/:
     get:
       tags: 
       - Store
@@ -195,7 +219,7 @@ paths:
                 $ref: '#/components/schemas/Product'
   
   
-  /store/cart:
+  /store/cart/:
     get:
       tags: 
       - Store
@@ -235,7 +259,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Cart'
     
-  /store/cart/{product_id}:
+  /store/cart/{product_id}/:
     post:
       tags: 
       - Store
@@ -279,7 +303,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Cart'
                 
-  /store/order:
+  /store/order/:
     get: 
       tags: 
       - Store
@@ -323,7 +347,7 @@ paths:
         403:
           description: Forbidden
       
-  /store/order/{order_id}:
+  /store/order/{order_id}/:
     get:
       tags: 
       - Store
@@ -376,7 +400,7 @@ paths:
         403:
           description: Forbidden
           
-  /store/payment/{order_id}:
+  /store/payment/{order_id}/:
     post:
       tags: 
       - Store
@@ -408,7 +432,7 @@ paths:
           description: Forbidden
           
   # -------------- Dashboard --------------
-  /admin/user:
+  /admin/user/:
     get:
       tags: 
       - Dashboard
@@ -448,7 +472,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-  /admin/user/{user_id}:
+  /admin/user/{user_id}/:
     get:
       tags: 
       - Dashboard
@@ -518,7 +542,7 @@ paths:
         200:
           description: Deleted
   
-  /admin/product:
+  /admin/product/:
     get:
       tags: 
       - Dashboard
@@ -557,7 +581,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Product'
-  /admin/product/{product_id}:
+  /admin/product/{product_id}/:
     get:
       tags: 
       - Dashboard
@@ -628,7 +652,7 @@ paths:
         200:
           description: Deleted
   
-  /admin/order:
+  /admin/order/:
     get:
       tags: 
       - Dashboard
@@ -667,7 +691,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Product'
-  /admin/order/{order_id}:
+  /admin/order/{order_id}/:
     get:
       tags: 
       - Dashboard
@@ -738,7 +762,7 @@ paths:
         200:
           description: Deleted
 
-  /admin/payment:
+  /admin/payment/:
     get:
       tags: 
       - Dashboard
@@ -777,7 +801,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Payment'
-  /admin/payment/{payment_id}:
+  /admin/payment/{payment_id}/:
     get:
       tags: 
       - Dashboard
@@ -848,7 +872,7 @@ paths:
         200:
           description: Deleted
           
-  /admin/overview:
+  /admin/overview/:
     get:
       tags: 
       - Dashboard
